--- a/index.html
+++ b/index.html
@@ -312,6 +312,39 @@
       </ul>  
     </address> 
     </div>
+    <div class="soc-list">
+        <p class="foot-title">ПРИСОЕДИНЯЙТЕСЬ</p>
+        <ul class="soc-list_list">
+        <li class="soc-list_item">
+            <a class="soc-list_link" href="">
+                <svg class="soc-list_icons">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="soc-list_item">
+            <a class="soc-list_link" href="">
+                <svg class="soc-list_icons">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="soc-list_item">
+            <a class="soc-list_link" href="">
+                <svg class="soc-list_icons">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="soc-list_item">
+            <a class="soc-list_link" href="">
+                <svg class="soc-list_icons">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+        </li>
+        </ul>
+    </div>
     </div>
   </footer> 
 </body>
