--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
         <!-- Особенности-->
         <section class="main-information">
-            <div class="container main">   
+            <div class="container">   
          <ul class="main-info-item">
         <li class="main-info-link icon-antenna">
             <h2 class="main-info-title">Внимание к деталям</h2>
@@ -88,7 +88,7 @@
         <!-- чем занимаемся-->
         <section class="about">
             <h2 class="about-title">Чем мы занимаемся</h2>
-         <div class="container main">
+         <div class="container">
             <ul class="about-list">
             <li class="item"> <img  class="about-list-img"   src="./images/img.jpg" alt="человек печатает" width="370">
             </li>
@@ -103,7 +103,7 @@
         <!-- наша команда-->
         <section class="team" >
         <h2 class="about-title">Наша команда</h2>
-        <div class="container main">
+        <div class="container">
         <ul class="team-list">
             <li class="team-list-item" >
                 <img class="team-list-img" src="./images/img11.jpg" alt="Фото Игоря Демьяненко" width="270">
@@ -255,7 +255,7 @@
         <!-- наши клиенты-->
      <section class="our-clients">
         <h2 class="about-title">Постоянные клиенты</h2>
-            <div class="container main">
+            <div class="container">
                 <ul class="clients-list">
                     <li class="clients-list_item">
                         <a class="clients-list_link" href="">
@@ -294,7 +294,7 @@
     </main>
    <!--Подвал-->
    <footer class="footer">
-    <div class="container">
+    <div class="container foot">
         <div class="adress-item">
     <a href="./index.html" class="logo inverse"><span class="logo-accent">Web </span>Studio</a>
     
