--- a/portfolio.html
+++ b/portfolio.html
@@ -74,45 +74,62 @@
           </a>
             </li>
         <li class="element">
+            <a class="card-link" href="">  
             <img class="project-list-img" src="./images/img-12.jpg" alt="" width="370">
             <div class="text">   
              <h2 class="element-title">Постер New Orlean vs Golden Star</h2>
-             <p class="description">Дизайн</p></div>   
+             <p class="description">Дизайн</p>
+            </div>
+             </a>   
         </li>
         <li class="element">
+            <a class="card-link" href="">  
              <img class="project-list-img" src="./images/img-13.jpg" alt="" width="370">
         <div class="text">    <h2 class="element-title">Ресторан Seafood</h2>
             <p class="description">Приложение</p></div>
+            </a>
             </li>
         <li class="element">
+            <a class="card-link" href="">  
              <img class="project-list-img" src="./images/img-14.jpg" alt="" width="370">
          <div class="text">   <h2 class="element-title">Проект Prime</h2>
-            <p class="description">Маркетинг</p></div>          
+            <p class="description">Маркетинг</p></div>
+            </a>          
        </li>
         <li class="element">
+            <a class="card-link" href="">  
              <img class="project-list-img" src="./images/img-15.jpg" alt="" width="370">
         <div class="text">    <h2 class="element-title">Проект Boxes</h2>
             <p class="description">Приложение</p></div>
+            </a>
             </li>
         <li class="element">
+            <a class="card-link" href="">  
              <img class="project-list-img" src="./images/img-16.jpg" alt="" width="370">
          <div class="text">   <h2 class="element-title">Inspiration has no Borders</h2>
-            <p class="description">Веб-сайт</p></div>       
+            <p class="description">Веб-сайт</p></div>
+            </a>       
            </li>
         <li class="element">
+            <a class="card-link" href="">  
              <img class="project-list-img" src="./images/img-19.jpg" alt="" width="370">
         <div class="text">    <h2 class="element-title">Издание Limited Edition</h2>
-            <p class="description">Дизайн</p></div> 
+            <p class="description">Дизайн</p></div>
+            </a> 
                 </li>
         <li class="element">
+            <a class="card-link" href="">  
              <img class="project-list-img" src="./images/img-17.jpg" alt="" width="370">
          <div class="text">   <h2 class="element-title">Проект LAB</h2>
-            <p class="description">Маркетинг</p> </div>        
+            <p class="description">Маркетинг</p> </div>
+            </a>        
            </li>
             <li class="element">
+                <a class="card-link" href="">  
                 <img class="project-list-img" src="./images/img-21.jpg" alt="">
          <div class="text">       <h2 class="element-title">Growing Business</h2>
                 <p class="description">Приложение</p></div>
+                </a>
             </li>
     </ul>
     </div>
