--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!-- Герой -->
     <main class="main-page">
         <section class="hero">
-
-            <h1 class="main-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <div class="overlay">
+            <h1 class="main-title">эффективные решения<br> для вашего бизнеса</h1>
             <button class="main-btn"  type="button">Заказать услугу</button>
-        
+       </div>
         </section>
         <!-- Особенности-->
         <section class="main-information">
